tests/skip/duplicate-getters-3.stderr
error: encountered duplicate `#[skip]` attribute for field
 --> $DIR/duplicate-getters-3.rs:5:24
  |
5 |     #[skip(getters)] #[skip]
  |                        ^^^^

error: duplicate `#[skip]` here
 --> $DIR/duplicate-getters-3.rs:5:7
  |
5 |     #[skip(getters)] #[skip]
  |       ^^^^
